--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3005",
-    "lint": "eslint",
-    "postbuild": "next-sitemap",
-    "generate-sitemap": "next-sitemap"
+    "lint": "eslint"
   },
   "dependencies": {
     "next": "16.1.1",
